# shiubi-2.0

./: access.json  backup.json  bank.json  controle.py  economy.py  help.json  main.py  pyproject.toml  role.py  verify.py  wavelinkmusic.py
needless/: music.py  playMusic.py
