[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
youtube_dl = "^2021.12.17"
discord = "^1.7.3"
Flask = "^2.0.3"
discord-py-slash-command = "^3.0.3"
discord-ui = "^5.1.6"
ui = "^0.1.4"
PyNaCl = "^1.5.0"
"discord-interactions.py" = "^0.0.8"
wavelink = "^1.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"